scripts/e2e/cmd/runner/testdata/networking-v1/one-namespace-one-ingress/ssl-profile/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: backendapp
        imagePullPolicy: Always
        image: docker.io/kennethreitz/httpbin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-profile: "test-ssl-profile"
spec:
  tls:
  - secretName: testsecret-tls
    hosts:
    - mtls-listener
  rules:
    - host: mtls-listener
      http:
        paths:
        - path: /
          backend:
            service:
              name: backend-service
              port:
                number: 80
          pathType: Exact
---
apiVersion: v1
kind: Secret
metadata:
  name: testsecret-tls
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJGekNCdndJVVlBVGFDc0l1T0xrbzYrYTdKOGNqSUtJdTFnRXdDZ1lJS29aSXpqMEVBd0l3RHpFTk1Bc0cKQTFVRUF3d0VkR1Z6ZERBZUZ3MHlNVEEzTVRRd05ESTJNemxhRncweU16QTNNRFF3TkRJMk16bGFNQTh4RFRBTApCZ05WQkFNTUJIUmxjM1F3V1RBVEJnY3Foa2pPUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVJTd2dMdUtzRWpoN2NhCkNJcUdDKy82by9XMzdocE1idmFZb2h3QXBRczZBYnd5L0R6Y0FSY29vYnROdGhwN1UxcVkrU0F5bk9mNlJyYS8KbXI4QWQ4YlFNQW9HQ0NxR1NNNDlCQU1DQTBjQU1FUUNJQVFGUUNlUENuK1liQ1RuNnIxdzZFdmNpdVdVRGhGNgovOFluakdOQkN5MmZBa [...]
  tls.key: LS0tLS1CRUdJTiBFQyBQQVJBTUVURVJTLS0tLS0KQmdncWhrak9QUU1CQnc9PQotLS0tLUVORCBFQyBQQVJBTUVURVJTLS0tLS0KLS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUw4cytYYkZGQ1ArTmZWOXZKNGJ0ckVRcEVvMEVmUEREY3lsK080OU1IZmtvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFVXNJQzdpckJJNGUzR2dpS2hndnYrcVAxdCs0YVRHNzJtS0ljQUtVTE9nRzhNdnc4M0FFWApLS0c3VGJZYWUxTmFtUGtnTXB6bitrYTJ2NXEvQUhmRzBBPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
